[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchid"
version = "0.1.0"
authors = [
  { name="Brian Yu", email="brian@brianyu.me" },
]
description = "A Python animation library for the Blackmagic Fusion API"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/SpanningTreeLab/orchid"
